# JQC

./: .buildpacks  .dockerignore  .env.example  .erb_lint.yml  .eslintrc.yml  .gcloudignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .nycrc  .rubocop.yml  .simplecov  .solargraph.yml  .sops.yaml  .yamllint  AGENTS.md  CLAUDE.md  Dockerfile  GAE_production.yaml  GAE_staging.yaml  Gemfile  Guardfile  Justfile  LICENSE  Makefile  Procfile  README.md  Rakefile  app.json  app.yaml  cron.yaml  eslint.config.mjs  mise.toml  package-lock.json  package.json  secrets.sops.env  sonar-project.properties  staging.yaml
.claude/: settings.json
.github/: dependabot.yml  dependabot.yml.disable
.kamal/: secrets
config/: application.rb  brakeman.ignore  cable.yml  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  puma.rb  recurring.yml  routes.rb  storage.yml
db/: cable_structure.sql  cache_structure.sql  old_schema_from_appmaker.rb  queue_structure.sql  scaffold_all.sh  schema.rb  seeds.rb  structure.sql
deployment_checks/: run.rb
lib/: csv_response.rb  statsd_monitoring_middleware.rb
migrator/: migrate.py  pyproject.toml
monitoring/: grafana_alerts.json  grafana_dashboard.json
production/: README.md  sign_in_and_check_table_test.rb
public/: robots.txt
script/: find_in_backups.rb
scripts/: ansible-env.sh  pgadmin-connect.sh  restic-backup.sh  restic-restore.sh  restore-from-old-prod-backups.sh  tofu-apply.sh  tofu-destroy.sh  tofu-env.sh  tofu-init.sh  tofu-output.sh
test/: application_system_test_case.rb  browser_test_case.rb  (+2 more)
(+565 files in other folders)
